--- a/app/src/main/res/layout/activity_third_implementions.xml
+++ b/app/src/main/res/layout/activity_third_implementions.xml
@@ -1,84 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/manage_viewpager"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_above="@+id/manage_radio_group"
-        android:layout_below="@+id/manage_title">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    </android.support.v4.view.ViewPager>
+        <com.wy.bottomNavigations.widget.NoScrollViewPager
+            android:id="@+id/manage_viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.4dp"
-        android:background="#99cccccc"
-        android:visibility="visible" />
+        </com.wy.bottomNavigations.widget.NoScrollViewPager>
 
-    <RadioGroup
-        android:id="@+id/manage_radio_group"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.4dp"
+            android:background="#99cccccc"
+            android:visibility="visible" />
+
+        <RadioGroup
+            android:id="@+id/manage_radio_group"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/third_home"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1  "
+                android:button="@null"
+                android:checked="false"
+                android:drawablePadding="4dp"
+                android:drawableTop="@drawable/selector_tab_home"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:tag="radio_button0"
+                android:text="首页"
+                android:textColor="@color/selector_tab_text"
+                android:textSize="10sp" />
+
+
+            <RadioButton
+                android:id="@+id/third_classify"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1  "
+                android:button="@null"
+                android:checked="false"
+                android:drawablePadding="4dp"
+                android:drawableTop="@drawable/selector_tab_home"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:tag="radio_button1"
+                android:text="订单"
+                android:textColor="@color/selector_tab_text"
+                android:textSize="10sp"
+                android:visibility="invisible" />
+
+
+            <RadioButton
+                android:id="@+id/third_shoppingCar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1  "
+                android:button="@null"
+                android:checked="false"
+                android:drawablePadding="4dp"
+                android:drawableTop="@drawable/selector_tab_home"
+                android:gravity="center"
+                android:paddingTop="5dp"
+                android:tag="radio_button2"
+                android:text="统计"
+                android:textColor="@color/selector_tab_text"
+                android:textSize="10sp" />
+        </RadioGroup>
+
+    </LinearLayout>
+    <ImageView
+        android:id="@+id/listen"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:contentDescription="@null"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="5dp"
+        android:src="@drawable/tab_center_img" />
 
-        <RadioButton
-            android:id="@+id/third_home"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1  "
-            android:button="@null"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:tag="radio_button0"
-            android:text="首页"
-            android:textSize="10sp"
-            android:textColor="@color/selector_tab_text"
-            android:drawablePadding="4dp"
-            android:drawableTop="@drawable/selector_tab_home"
-            android:checked="false" />
-
-
-        <RadioButton
-            android:id="@+id/third_classify"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1  "
-            android:button="@null"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:tag="radio_button1"
-            android:text="订单"
-            android:textSize="10sp"
-            android:textColor="@color/selector_tab_text"
-            android:drawablePadding="4dp"
-            android:drawableTop="@drawable/selector_tab_home"
-            android:checked="false" />
-
-
-        <RadioButton
-            android:id="@+id/third_shoppingCar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1  "
-            android:button="@null"
-            android:gravity="center"
-            android:paddingTop="10dp"
-            android:tag="radio_button2"
-            android:text="统计"
-            android:textSize="10sp"
-            android:textColor="@color/selector_tab_text"
-            android:drawablePadding="4dp"
-            android:drawableTop="@drawable/selector_tab_home"
-            android:checked="false" />
-    </RadioGroup>
-</LinearLayout>
+</RelativeLayout>
