--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="themeColor">#2196f3</color>
     <color name="themeTextColor">#ffffff</color>
     <color name="lineColor">#cccccc</color>
+
+
+    <color name="white_40">#64FFFFFF</color>
 </resources>
